Move sortable icons into divs to fix Firefox borders from overflowing

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -88,14 +88,14 @@
   content: "u";
 }
 
-td.sortable {
-    padding-right: 20px !important;
-    padding-left: 4px;
+td .sortable {
+    padding-right: 20px;
+    padding-left: 6px;
     position: relative;
     text-align: left;
     cursor: pointer;
 }
-td.sortable:before, td.sortable:after{
+td .sortable:before, td .sortable:after{
     content: "";
     display: block;
     border: 4px solid transparent;
@@ -103,17 +103,17 @@ td.sortable:before, td.sortable:after{
     right: 6px;
     top: 50%;
 }
-td.sortable:before {
+td .sortable:before {
     border-bottom-color: #666;
     margin-top: -9px;
 }
-td.sortable:after {
+td .sortable:after {
     border-top-color: #666;
     margin-top: 1px;
 }
-td.sortable.descending:before {
+td .sortable.descending:before {
     border-bottom-color: #bbb; 
 }
-td.sortable.ascending:after {
+td .sortable.ascending:after {
     border-top-color: #bbb; 
 }
